# congrex

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
congrex-executor/: Cargo.toml
congrex-executor/src/: main.rs
scripts/: check-chalk-types.mjs  ensure-shebang.mjs  postinstall.mjs  run-tests.mjs
src/: apiKeys.ts  chalkLike.ts  commandSafety.ts  config.ts  congrexExecutor.ts  consensus.ts  debateGate.ts  http.ts  index.ts  mcp.ts  sanitize.ts  sessionResume.ts  version.ts
src/utils/: updateNotifier.ts
test/: commandSafety.test.ts  config.test.ts  consensus.test.ts  debateGate.test.ts  http.test.ts  mcpFingerprint.test.ts  postinstall.test.ts  readme-version.test.ts  sanitize.test.ts  sessionResume.test.ts  updateNotifier.test.ts
